# trustun

./: AGENTS.md  Cargo.toml  README.md  SANS_IO_MIGRATION.md  TEST_SUMMARY.md  migrate_to_sans_io.sh  protocol-ideas.md  run.sh  sans-io-migration.md
.gemini_security/: SECURITY_ANALYSIS_TODO.md
docs/: vpn-implementation.md
scripts/: e2e-vpn.sh
src/: lib.rs  main.rs  main_original.rs  main_sans_io.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs
src/control/: coord.rs  mod.rs  stun.rs
src/io/: adapters.rs  buffer.rs  mod.rs  traits.rs
src/net/: engine.rs  mod.rs  router.rs
src/proto/: mod.rs
src/protocol/: errors.rs  events.rs  mod.rs  path.rs  peer.rs  tests.rs  wire.rs
src/relay/: frame.rs  mod.rs
src/runtime/: mod.rs  tokio.rs
src/sans_io/: mod.rs
src/tasks/: coord.rs  mod.rs  relay.rs  timer.rs  tun.rs  udp.rs
tests/: e2e_script_test.rs  integration_test.rs  protocol_migration_test.rs  run_script_test.rs  runtime_config_test.rs  sans_io_trait_test.rs
