[package]
name = "opentun"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
tokio = {version = "1.46.1", features = ["full"]}
tun = { version = "0.8", features = ["async"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.31"
x25519-dalek = { version = "2.0.1", features = [
  "getrandom",
    "reusable_secrets",
    "static_secrets",
] }
base64 = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chacha20poly1305 = "0.10.1"
rand = "0.9.1"
stunclient = "0.4.2"
thiserror = "2.0.12"
snow = "0.10.0"
